Orderbox.Mvc/Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: orderbox-service
  namespace: orderbox
spec:
  selector:
    app: orderbox
  ports:
    - protocol: TCP
      port: 1180
      targetPort: 80
