Orderbox.Mvc/Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    "kubernetes.io/ingress.class": "nginx"
    "nginx.ingress.kubernetes.io/proxy-body-size": "25M"
    "nginx.ingress.kubernetes.io/proxy-buffering": "on"
    "nginx.ingress.kubernetes.io/proxy-buffer-size": "128k"
    "nginx.ingress.kubernetes.io/proxy-buffers-number": "4"
    "cert-manager.io/issuer": "orbox.id-cert-issuer"
  name: ingress
  namespace: orderbox
spec:
  rules:
  - host: orbox.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderbox-service
            port: 
              number: 1180
  - host: '*.orbox.id'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orderbox-service
            port: 
              number: 1180
  tls:
  - hosts:
    - orbox.id
    - '*.orbox.id'
    secretName: orbox.id-cert-secret
